--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -24,5 +24,8 @@
     "url": "https://github.com/joaovictor1516/plann.er/issues"
   },
   "homepage": "https://github.com/joaovictor1516/plann.er#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "zod": "^3.23.8"
+  }
 }
