--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.25.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
