--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
