--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.408.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
