--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.408.0",
     "match-sorter": "^6.3.4",
