--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "sonner": "^1.5.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
