--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
   "homepage": "https://github.com/joaovictor1516/plann.er#readme",
   "description": "",
   "dependencies": {
+    "axios": "^1.3.1",
+    "fastify": "^4.28.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
