--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/joaovictor1516/plann.er#readme",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "axios": "^1.3.1",
     "fastify": "^4.28.1",
     "zod": "^3.23.8"
