--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.18.0",
     "axios": "^1.3.1",
     "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
