--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -28,10 +28,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@types/nodemailer": "^6.4.15",
     "axios": "^1.3.1",
     "dayjs": "^1.11.12",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
+    "nodemailer": "^6.9.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
