--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/joaovictor1516/plann.er#readme",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.18.0",
     "@types/nodemailer": "^6.4.15",
     "axios": "^1.3.1",
